# CV_Vulkan_Simulator

./: .gitignore  CMakeLists.txt  README.md
assets/: scene_config.json  simple_scene.json
shaders/: blur_h.frag  blur_h.frag.spv  blur_v.frag  blur_v.frag.spv  bright.frag  bright.frag.spv  exposure_reduce.comp  exposure_reduce.comp.spv  exposure_update.comp  exposure_update.comp.spv  lens_flare.comp  lens_flare.comp.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  post.frag  post.frag.spv  post.vert  post.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadow.frag  shadow.vert  shadow.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
src/: app.cpp  keyboard_movement_controller.cpp  main.cpp
src/include/: app.hpp  keyboard_movement_controller.hpp  ros_bridge.hpp  utils.hpp
src/render/: bloom_pass.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  lens_flare_pass.cpp  model.cpp  object.cpp  pipeline.cpp  renderer.cpp  scene_pass.cpp  swap_chain.cpp  window.cpp
src/render/include/: bloom_pass.hpp  buffer.hpp  camera.hpp  descriptors.hpp  device.hpp  frame_info.hpp  frustum.hpp  lens_flare_pass.hpp  model.hpp  object.hpp  pipeline.hpp  renderer.hpp  scene_pass.hpp  swap_chain.hpp  window.hpp
src/render/systems/: blur_render_system.cpp  bright_render_system.cpp  exposure_reduce_system.cpp  exposure_update_system.cpp  point_light_system.cpp  post_process_render_system.cpp  shadow_render_system.cpp  simple_render_system.cpp  skybox_render_system.cpp
src/render/systems/include/: blur_render_system.hpp  bright_render_system.hpp  exposure_reduce_system.hpp  exposure_update_system.hpp  point_light_system.hpp  post_process_render_system.hpp  shadow_render_system.hpp  simple_render_system.hpp  skybox_render_system.hpp
